--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -27,10 +27,14 @@ a {
 	text-decoration: none;
 	transition: @transition-time color, @transition-time background;
 
-	&:hover,
-	&:focus {
-		color: @link-color--hover;
+	&:before,
+	&:after {
+		transition: @transition-time color, @transition-time background;
 	}
+}
+
+button{
+	transition: @transition-time color, @transition-time background;
 
 	&:before,
 	&:after {
@@ -50,6 +54,7 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0;
 	color: @text-color;
 	margin-bottom: 1em;
+	font-family: @font-family--serif;
 }
 h1,
 .h1 {
@@ -73,7 +78,7 @@ h5,
 }
 
 p {
-	margin-bottom: 10px;
-	margin-top: 10px;
-	line-height: 1.2;
+	line-height: 1.25rem;
+	margin-bottom: 1.25rem;
+	color: #666;
 }
