--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -11,6 +11,7 @@
 // My styles
 @import 'components/_btn';
 @import 'components/_ui';
+@import 'components/_form';
 
 @import 'components/_page-header';
 @import 'components/_page-footer';
