--- a/src/less/components/_fonts.less
+++ b/src/less/components/_fonts.less
@@ -1,9 +1,122 @@
-// @font-face {
-// 	font-family: 'name';
-// 	src: url('../fonts/name/name.eot');
-// 	src: url('../fonts/name/name.eot?#iefix') format('embedded-opentype'),
-// 			url('../fonts/name/name.woff') format('woff'),
-// 			url('../fonts/name/name.ttf') format('truetype');
-// 	font-weight: normal;
-// 	font-style: normal;
-// }
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700|Playfair+Display:400,700&subset=cyrillic');
+
+@font-face {
+	font-family: 'icomoon';
+	src: url('../fonts/icomoon/icomoon.eot');
+	src: url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
+			url('../fonts/icomoon/icomoon.woff') format('woff'),
+			url('../fonts/icomoon/icomoon.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+[class^="i-"], [class*=" i-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .i-add:before {
+    content: "\e900";
+  }
+  .i-add-bold:before {
+    content: "\e901";
+  }
+  .i-agreement:before {
+    content: "\e902";
+  }
+  .i-attachment:before {
+    content: "\e903";
+  }
+  .i-award:before {
+    content: "\e904";
+  }
+  .i-back:before {
+    content: "\e905";
+  }
+  .i-bars:before {
+    content: "\e906";
+  }
+  .i-bars-bold:before {
+    content: "\e907";
+  }
+  .i-books:before {
+    content: "\e908";
+  }
+  .i-courthouse:before {
+    content: "\e909";
+  }
+  .i-error:before {
+    content: "\e90a";
+  }
+  .i-facebook:before {
+    content: "\e90b";
+  }
+  .i-file:before {
+    content: "\e90c";
+  }
+  .i-icon:before {
+    content: "\e90d";
+  }
+  .i-language:before {
+    content: "\e90e";
+  }
+  .i-law-book:before {
+    content: "\e90f";
+  }
+  .i-libra:before {
+    content: "\e910";
+  }
+  .i-menu:before {
+    content: "\e911";
+  }
+  .i-photo-camera-sign:before {
+    content: "\e912";
+  }
+  .i-placeholder-filled-point:before {
+    content: "\e913";
+  }
+  .i-play-button:before {
+    content: "\e914";
+  }
+  .i-right-arrow:before {
+    content: "\e915";
+  }
+  .i-right-chevron:before {
+    content: "\e916";
+  }
+  .i-save:before {
+    content: "\e917";
+  }
+  .i-search:before {
+    content: "\e918";
+  }
+  .i-statement:before {
+    content: "\e919";
+  }
+  .i-substract:before {
+    content: "\e91a";
+  }
+  .i-twitter:before {
+    content: "\e91b";
+  }
+  .i-user-image-with-black-background:before {
+    content: "\e91c";
+  }
+  .i-video-camera:before {
+    content: "\e91d";
+  }
+  .i-vk:before {
+    content: "\e91e";
+  }
+  
