--- a/src/less/components/_ui.less
+++ b/src/less/components/_ui.less
@@ -4,11 +4,15 @@ input[type=search],
 input[type=tel],
 input[type=url],
 input[type=email], {
-
+	position: relative;
 }
 
 input[type=checkbox] {
-	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	z-index: 2;
 
 	& + label {
 		&:before {
@@ -24,7 +28,11 @@ input[type=checkbox] {
 }
 
 input[type=radio] {
-	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	z-index: 2;
 
 	& + label {
 		&:before {
@@ -40,5 +48,5 @@ input[type=radio] {
 }
 
 textarea {
-
+	position: relative;
 }
