--- a/src/less/components/_variables.less
+++ b/src/less/components/_variables.less
@@ -6,8 +6,11 @@
 @link-color: @brand-primary;
 @link-color--hover: darken(@link-color,20%);
 
+@error: #f24841;
 @white: #fff;
 @black: #000;
+@main: #ba9241;
+@main--hover:  darken(@main,10%);
 
 @text-color: @black;
 
@@ -17,19 +20,19 @@
 //  Typography
 //------------------------------------------------------------------------------
 
-@font-family-sans-serif:      Arial, sans-serif;
+@font-family-sans-serif:      'Open Sans', sans-serif;
 @font-family:                 @font-family-sans-serif;
-@font-family--serif:          Georgia, "Times New Roman", Times, serif;
+@font-family--serif:          'Playfair Display', serif;
 @font-family--monospace:      Menlo, Monaco, Consolas, "Courier New", monospace;
 
-@base-font-size:              10px;
-@font-size:                   1.4rem;
+@base-font-size:              16px;
+@font-size:                   1rem;
 
-@font-size--h1:               3.6rem;
-@font-size--h2:               2.6rem;
-@font-size--h3:               1.8rem;
-@font-size--h4:               1.4rem;
-@font-size--h5:               1.2rem;
+@font-size--h1:               2.25rem;
+@font-size--h2:               1.5rem;
+@font-size--h3:               1.25rem;
+@font-size--h4:               1.125rem;
+@font-size--h5:               1.1rem;
 
 @line-height:                 1;
 
