--- a/src/pug/templates/_layout.pug
+++ b/src/pug/templates/_layout.pug
@@ -10,7 +10,8 @@ html(lang="ru")
 
 		main.main(id='#{page}')
 			block content
-
+			include _guidline
+			
+		
 		include ../components/_page-footer
-
 		include _footer
