--- a/src/less/components/_btn.less
+++ b/src/less/components/_btn.less
@@ -26,21 +26,23 @@
 		right: 0;
 		bottom: 0;
 		z-index: 0;
+		background-color: transparent;
+		border: 1px solid @main;
 	}
 
 	&:after{
 		content: '';
 		position: absolute;
-		left: 1px;
-		top: 1px;
-		right: 1px;
-		bottom: 1px;
+		left: 5px;
+		top: 5px;
+		right: 5px;
+		bottom: 5px;
 		z-index: 1;
-		border: 4px solid @white;
 	}
 
 	span{
 		z-index: 2;
+		white-space: nowrap;
 	}
 
 	&_size{
@@ -55,11 +57,10 @@
 	&_color{
 
 		&-yellow{
-			background-color: @main;
 			color: @white;
 
 			&:before{
-				background-color: @main;
+				border: 1px solid @main;
 			}
 
 			&:after{
@@ -67,11 +68,10 @@
 			}
 
 			&:hover {
-				background-color: @main--hover;
 				color: @white;
 
 				&:before{
-					background-color: @main--hover;
+					border-color: @main--hover;
 				}
 	
 				&:after{
@@ -80,11 +80,10 @@
 			}
 
 			&:active {
-				background-color: @main--hover;
 				color: @white;
 
 				&:before{
-					background-color: @main--hover;
+					border-color: @main--hover;
 				}
 	
 				&:after{
@@ -93,11 +92,10 @@
 			}
 
 			&:focus {
-				background-color: @main--hover;
 				color: @white;
 
 				&:before{
-					background-color: @main--hover;
+					border-color: @main--hover;
 				}
 	
 				&:after{
