--- a/src/less/components/_page-footer.less
+++ b/src/less/components/_page-footer.less
@@ -1,3 +1,61 @@
-.page-footer {
+.footer {
+    position: relative;
+    background-color: #252525;
+    margin-top: auto;
+    padding: 3rem 0 1.125rem;
 
+    .menu{
+
+        &_item{
+
+            a{
+                padding: 0.625rem 0;
+                font-size: 0.75rem;
+            }
+
+            &:first-child{
+
+                a{
+                    padding-top: 0;
+                }
+            }
+        }
+
+        &_btn{
+            margin-top: 2.5rem;
+
+            a{
+                font-size: 0.75rem;
+            }
+        }
+    }
+
+    p{
+        color: #fff;
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+    }
+
+    &_block{
+        margin-bottom: 1.875rem;
+
+        p{
+            margin-bottom: 0.5rem;
+
+            span{
+                font-family: @font-family--serif;
+                margin-right: 0.25rem;
+            }
+            
+            a{
+                color: #fff;
+            }
+        }
+    }
+
+    .contacts_phone{
+        justify-content: flex-end;
+        margin-bottom: 0;
+        padding-right: 1.25rem;
+    }
 }
