--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -12,6 +12,15 @@
 @import 'components/_btn';
 @import 'components/_ui';
 @import 'components/_form';
+@import 'components/_social';
+@import 'components/_pagination';
+@import 'components/_breadcrumbs';
+@import 'components/_title';
+@import 'components/_menu';
+@import 'components/_dropdown';
+@import 'components/_language';
+@import 'components/_burger';
+@import 'components/_carousel';
 
 @import 'components/_page-header';
 @import 'components/_page-footer';
