--- a/src/less/components/_carousel.less
+++ b/src/less/components/_carousel.less
@@ -29,5 +29,9 @@
                 }
             }
         }
+
+        @media (max-width: 39.975em){
+            margin-bottom: 1.5rem;
+        }
     }
 }
