--- a/src/less/components/_menu.less
+++ b/src/less/components/_menu.less
@@ -70,6 +70,7 @@
             border: 1px solid #fff;
             color: #fff;
             transition: @transition-time;
+            white-space: nowrap;
 
             &:hover{
                 color: @main;
