--- a/src/less/components/_social.less
+++ b/src/less/components/_social.less
@@ -14,6 +14,12 @@
         color: #999;
         font-size: 2rem;
         margin-right: 1.25rem;
+
+        @media (max-width: 39.975em){
+            width: 2.125rem;
+            height: 2.125rem;
+            margin-right: 0.625rem;
+        }
         
 
         &:last-child{
