--- a/src/pug/components/_page-footer.pug
+++ b/src/pug/components/_page-footer.pug
@@ -1,12 +1,12 @@
 footer.footer
     .row
-        .columns.small-12.medium-3.large-3
+        .columns.small-5.medium-3.large-3
             - var values = ['О нас', 'Услуги', 'НОВОСТИ', 'Полезная информация', 'КОНТАКТЫ'];
             ul.menu.menu-white.footer_menu
                 each val in values
                     li.menu_item
                         a(href='#')= val
-                li.menu_btn
+                li.menu_btn.hidden-small
                         a(href='#')
                             | скачать брошюру
         .columns.small-12.medium-4.large-3.large-offset-1
@@ -46,10 +46,13 @@ footer.footer
                     p
                         span E-mail:
                         a(href='mailto:info@belyavskii.com') info@belyavskii.com
-        .columns.small-12.medium-5.large-4.large-offset-1
-            .footer_block.flex.align-middle
+        .columns.small-7.medium-5.large-4.large-offset-1
+            .footer_block.flex.align-middle.column-small
                 a.contacts_phone(href='tel:+375 (152) 967-004') +375 (152) 967-004
-                a.btn.btn_border.btn_color-yellow.btn_size-medium
+                a.btn.btn_border.btn_color-yellow.btn_size-medium.hidden-medium.hidden-small
+                    span Заказать звонок
+                a.contacts_callback.align-right.hidden-medium.hidden-large(href='#')
+                    i.i-icon
                     span Заказать звонок
             .footer_block.flex.align-middle.align-right
                 .social
@@ -59,7 +62,7 @@ footer.footer
                     +social('https://facebook.com', 'i-facebook')
                     +social('https://vk.com', 'i-vk')
                     +social('https://twitter.com', 'i-twitter')
-            .footer_block
+            .footer_block.hidden-small
                 .copirate
                     | ООО «Экономические споры", Лицензия на право осуществления деятельности по оказанию юридических услуг № *****/****, выдана на основании решения Министерства юстиции Республики Беларусь от **.**.2018. №***.         
     .row
@@ -68,4 +71,10 @@ footer.footer
                 a(href='http://abiatec.by/', target='_blank')
                     img(src="templates/_ares/img/svg/abiatec.svg", alt="")
         .columns.small-12.medium-4.large-3.large-offset-1
+            a.link.footer_link.hidden-small(href='#', download)
+                i.i-save
+                span Скачать vCard
+            .copirate.footer_link.hidden-medium.hidden-large
+                | ООО «Экономические споры", Лицензия на право осуществления деятельности по оказанию юридических услуг № *****/****, выдана на основании решения Министерства юстиции Республики Беларусь от **.**.2018. №***.   
         .columns.small-12.medium-5.large-4.large-offset-1
+            span.footer_link.align-right © ОАО Экономические споры
