--- a/src/less/components/_page-header.less
+++ b/src/less/components/_page-header.less
@@ -1,8 +1,8 @@
 .header {
+    z-index: 3;
     
     &-transparent{
         background-color: transparent;
-        background-color: #000;
         border-bottom: 1px solid #999;
 
         @media (max-width: 63.975em){
