--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -21,6 +21,9 @@
 @import 'components/_language';
 @import 'components/_burger';
 @import 'components/_carousel';
+@import 'components/_news';
 
+// Pages
 @import 'components/_page-header';
 @import 'components/_page-footer';
+@import 'components/_page-main';
