--- a/src/less/components/_dropdown.less
+++ b/src/less/components/_dropdown.less
@@ -4,7 +4,7 @@
     margin: 0;
 
     &_area{
-        top: 100%;
+        top: ~'calc(100% + 1px)';
         left: 0;
         right: auto;
         display: none;
