--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -97,10 +97,19 @@ h5,
 }
 
 p {
-	line-height: 1.25rem;
-	margin-bottom: 1.25rem;
+	line-height: 1.5rem;
+	margin-bottom: 1.5rem;
 	margin-top: 0;
 	color: #666;
+	font-weight: 300;
+
+	&:last-child{
+		margin-bottom: 0;
+	}
+
+	@media (max-width: 39.975em){
+		font-size: 0.875rem;
+	}
 }
 
 .copirate{
@@ -143,11 +152,22 @@ p {
 
 .hr{
 	position: relative;
-	margin: 1.875rem auto;
 	width: 100%;
 
 	&-mini{
 		max-width: 3.75rem;
+		margin: 1.875rem auto;
+	}
+
+	&-medium{
+		border-top-width: 3px;
+		max-width: 4.375rem;
+		margin: 2.5rem auto;
+	}
+
+	&-large{
+		max-width: 6.25rem;
+		margin: 2.5rem auto;
 	}
 
 	&-gold{
@@ -163,6 +183,14 @@ p {
 
 	&-right{
 		text-align: right;
+	}
+
+	&-white{
+		color: @white;
+
+		p{
+			color: @white;
+		}
 	}
 }
 
@@ -237,5 +265,158 @@ p {
 			border-bottom: 1px dashed #fff;
 			margin-left: 0.5rem;
 		}
+	}
+}
+
+.absolute{
+
+	&-large{
+		@media (min-width: 64em){
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+		}
+	}
+}
+
+.background{
+
+	&_image{
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+
+	&-cover{
+		background-size: cover;
+	}
+
+	&-100{
+		min-height: 100vh;
+	}
+
+	&_square{
+		width: 100%;
+		height: 100%;
+		padding-top: 100%;
+		display: block;
+		background-size: cover;
+	}
+
+	&_img{
+		position: absolute;
+		overflow: hidden;
+
+		&-clock{
+			background-image: url(../img/svg/clock.svg);
+			width: 40.75rem;
+			height: 40.75rem;
+			transform: translateX(-30%) translateY(-30%);
+		}
+	}
+}
+
+.shadow{
+
+	&-light{
+		box-shadow: 0 5px 12px rgba(0,0,0,.13);
+	}
+}
+
+.wrapper{
+	position: relative;
+	margin-top: -11.75rem;
+	z-index: 3;
+
+	@media (max-width: 39.975em){
+		margin-top: -3.75rem;
+	}
+}
+
+.section{
+	position: relative;
+	width: 100%;
+	margin-bottom: 5rem;
+}
+
+.image{
+
+	&-border{
+		position: relative;
+		padding: 0.625rem;
+
+		&:before{
+			content: '';
+			background-image: url(../img/svg/border-bottom.svg);
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			background-size: contain;
+			background-repeat: no-repeat;
+			width: 7.5rem;
+			height: 7.5rem;
+		}
+
+		&:after{
+			content: '';
+			background-image: url(../img/svg/border-top.svg);
+			position: absolute;
+			top: 0;
+			right: 0;
+			background-size: contain;
+			background-repeat: no-repeat;
+			width: 7.5rem;
+			height: 7.5rem;
+		}
+
+		img{
+			width: 100%;
+		}
+	}
+}
+
+.sign{
+	position: relative;
+	text-align: center;
+	font-size: 1rem;
+	font-weight: 700;
+	color: #999;
+	margin-top: 1.625rem;
+
+	&-post{
+		font-weight: 300;
+		position: relative;
+		text-align: center;
+		color: #999;
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
+}
+
+.patern{
+	background-image: url(../img/png/form_patern.png);
+}
+
+.name{
+	font-size: 1rem;
+	color: #666;
+	font-family: @font-family--serif;
+	margin-bottom: 0.125rem;
+
+	&_img{
+		width: 3.125rem;
+		height: 3.125rem;
+		display: block;
+		border-radius: 50%;
+		margin-right: 0.875rem;
+		
+	}
+
+	&_post{
+		font-size: 0.75rem;
+		color: #666;
+		font-style: italic;
+		font-weight: 300;
+		margin-top: 0.125rem;
 	}
 }
