--- a/src/less/components/_page-footer.less
+++ b/src/less/components/_page-footer.less
@@ -124,36 +124,40 @@
 
     .columns{
 
-        &:nth-child(1){
-            order: 1;
-        }
-
-        &:nth-child(2){
-            order: 3;
-        }
-
-        &:nth-child(3){
-            order: 2;
+        @media (max-width: 39.975em){
+            &:nth-child(1){
+                order: 1;
+            }
+    
+            &:nth-child(2){
+                order: 3;
+            }
+    
+            &:nth-child(3){
+                order: 2;
+            }
         }
     }
 
     .row{
 
-        &:nth-child(2){
-            .columns{
-
-                &:nth-child(1){
-                    order: 3;
-                }
-        
-                &:nth-child(2){
-                    order: 1;
-                }
-        
-                &:nth-child(3){
-                    order: 2;
-                }
-            }  
+        @media (max-width: 39.975em){
+            &:nth-child(2){
+                .columns{
+    
+                    &:nth-child(1){
+                        order: 3;
+                    }
+            
+                    &:nth-child(2){
+                        order: 1;
+                    }
+            
+                    &:nth-child(3){
+                        order: 2;
+                    }
+                }  
+            }
         }
     }
 }
