--- a/src/less/components/_title.less
+++ b/src/less/components/_title.less
@@ -7,6 +7,33 @@
 			font-family: @font-family--serif;
 			font-size: 1.5rem;
 		}
+
+		&-extraLarge{
+			font-size: 3rem;
+
+			@media (max-width: 39.975em){
+				font-size: 1.5rem;
+			}
+		}
+
+		&-section{
+			font-size: 3.75rem;
+		}
+	}
+
+	&_color{
+
+		&-main{
+			color: @main;
+		}
+
+		&-dark{
+			color: #333;
+		}
+
+		&-white{
+			color: @white;
+		}
 	}
 
 	&_footer{
@@ -16,4 +43,9 @@
 		color: #fff;
 		margin-bottom: 1rem;
 	}
+
+	&_main{
+		font-family: @font-family--serif;
+	}
+
 }
