--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -22,7 +22,8 @@
 @import 'components/_burger';
 @import 'components/_carousel';
 @import 'components/_news';
-
+@import 'components/_tabs';
+@import 'components/_gallery';
 // Pages
 @import 'components/_page-header';
 @import 'components/_page-footer';
