--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -35,6 +35,8 @@ block content
 				+box('./templates/_ares/img/svg/arbitration.svg','Третейский суд','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
 				+box('./templates/_ares/img/svg/mediation.svg','Медиация','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
 		section.main_about.section
+			.background_img.background_img-hammer
+			.background_img.background_img-libra
 			.row
 				.columns.small-12
 					.title.title_size-section.title_main.title_color-dark.text-center О нас
@@ -123,4 +125,5 @@ block content
 								p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
 							a.btn.btn_border.btn_color-yellow.btn_size-medium 
 								span Перейти к публикациям
-
+		include ./components/_map.pug
+		
