--- a/src/less/components/_carousel.less
+++ b/src/less/components/_carousel.less
@@ -108,4 +108,82 @@
             }
         }
     }
+
+    &_awards{
+
+        &_item{
+            display: flex;
+        }
+
+        .owl-dots{
+            display: flex;
+            justify-content: center;
+            margin-top: 2.5rem;
+
+            .owl-dot{
+                position: relative;
+                display: flex;
+                margin-right: 0.625rem;
+
+                &:last-child{
+                    margin-right: 0;
+                }
+
+                span{
+                    display: flex;
+                    width: 0.625rem;
+                    height: 0.625rem;
+                    background-color: #9d9d9d;
+                }
+
+                &.active{
+
+                    span{
+                        background-color: @main;
+                    }
+                }
+            }
+        }
+
+        .owl-nav{
+
+            button{
+                position: absolute;
+                top:  ~'calc(50% - 25px)';
+                transform: translateY(-50%);
+                font-size: 1.625rem;
+                margin: 0;
+
+                &:hover{
+                    color: #999;
+                }
+
+                &.owl-prev{
+                    left: -3rem;
+                }
+
+                &.owl-next{
+                    right: -3rem;
+                }
+            }
+        }
+
+        &_border{
+            display: flex;
+            border: 1px solid #bfbfbf;
+            padding: 0.25rem;
+            background-color: #fff;
+            width: 100%;
+            
+            span{
+                position: relative;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 11.625rem 16.625rem;
+                display: block;
+                width: 100%;
+                height: 17rem;
+            }
+        }
+    }
 }
