--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -38,7 +38,8 @@ body {
 	line-height: @line-height;
 	height: 100%;
 	display: flex;
-    flex-direction: column;
+	flex-direction: column;
+	min-width: 320px;
 }
 
 a {
@@ -109,6 +110,7 @@ p {
 
 	@media (max-width: 39.975em){
 		font-size: 0.875rem;
+		line-height: 1.25rem;
 	}
 }
 
@@ -157,6 +159,10 @@ p {
 	&-mini{
 		max-width: 3.75rem;
 		margin: 1.875rem auto;
+
+		@media (max-width: 39.975em){
+			margin: 1.125rem auto;
+		}
 	}
 
 	&-medium{
@@ -168,6 +174,10 @@ p {
 	&-large{
 		max-width: 6.25rem;
 		margin: 2.5rem auto;
+
+		@media (max-width: 39.975em){
+			margin: 1.625rem auto;
+		}
 	}
 
 	&-gold{
@@ -291,6 +301,10 @@ p {
 		background-size: cover;
 	}
 
+	&-50{
+		height: 50rem;
+	}
+
 	&-100{
 		min-height: 100vh;
 	}
@@ -306,12 +320,33 @@ p {
 	&_img{
 		position: absolute;
 		overflow: hidden;
+		background-repeat: no-repeat;
+
+		@media (max-width: 39.975em){
+			display: none;
+		}
 
 		&-clock{
 			background-image: url(../img/svg/clock.svg);
 			width: 40.75rem;
 			height: 40.75rem;
 			transform: translateX(-30%) translateY(-30%);
+		}
+
+		&-libra{
+			background-image: url(../img/svg/libra.svg);
+			width: 40.75rem;
+			height: 40.75rem;
+			transform: translateX(30%) translateY(10%);
+			right: 0;
+			bottom: 0;
+		}
+
+		&-hammer{
+			background-image: url(../img/svg/hammer.svg);
+			width: 40.75rem;
+			height: 22.75rem;
+			transform: translateX(-30%) translateY(-10%);
 		}
 	}
 }
@@ -325,11 +360,21 @@ p {
 
 .wrapper{
 	position: relative;
-	margin-top: -11.75rem;
 	z-index: 3;
+	margin-top: -11.75rem;
+	
 
 	@media (max-width: 39.975em){
 		margin-top: -3.75rem;
+	}
+
+	&_menu{
+		margin: 0 auto;
+		margin-top: -11.75rem;
+		background-color: #fff;
+		max-width: 80.625rem;
+		padding-top: 5rem;
+		z-index: 10;
 	}
 }
 
@@ -418,5 +463,13 @@ p {
 		font-style: italic;
 		font-weight: 300;
 		margin-top: 0.125rem;
+	}
+}
+
+.map{
+	height: 36.5rem;
+
+	#map{
+		height: 100%;
 	}
 }
