--- a/src/less/components/_page-main.less
+++ b/src/less/components/_page-main.less
@@ -5,13 +5,25 @@
     &_block{
         position: absolute;
         z-index: 10;
-        top: 50%;
-        transform: translateY(-50%);
+        top: 0;
         width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
 
         @media (max-width: 25em){
-            top: 55%;
+
         }
+
+        > .row{
+            width: 100%;
+        }
+    }
+
+    &_about{
+        overflow: hidden;
+        margin-bottom: 0;
+        padding-bottom: 5rem;
     }
 
     &_reviews{
@@ -52,7 +64,7 @@
         margin-bottom: 0;
 
         .background_image{
-            height: 45rem;
+            height: 48.5rem;
 
             @media (max-width: 39.975em){
 
