--- a/src/pug/templates/_footer.pug
+++ b/src/pug/templates/_footer.pug
@@ -1,2 +1,3 @@
-script(src="templates/_ares/js/app.min.js" defer)
 block scripts
+script(src="templates/_ares/js/app.min.js" defer)
+script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG23vup4kX29uex2QmcI4NJz1W-Ul4dls&callback=initMap", defer)
