--- a/src/less/components/_title.less
+++ b/src/less/components/_title.less
@@ -57,4 +57,11 @@
 		font-family: @font-family--serif;
 	}
 
+	&_contacts{
+		font-family: @font-family--serif;
+		font-size: 1rem;
+		margin-bottom: 0.875rem;
+		text-transform: uppercase;
+	}
+
 }
