--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -24,6 +24,8 @@
 @import 'components/_news';
 @import 'components/_tabs';
 @import 'components/_gallery';
+@import 'components/_accardion';
+@import 'components/_reviews';
 // Pages
 @import 'components/_page-header';
 @import 'components/_page-footer';
