--- a/src/less/components/_form.less
+++ b/src/less/components/_form.less
@@ -4,7 +4,7 @@
         margin-bottom: 0.625rem;
 
         &:last-child{
-            margin-bottom: 0;
+            // margin-bottom: 0;
         }
 
         &-checkbox {
@@ -218,7 +218,7 @@
     &-error{
         position: absolute;
         display: none;
-        left: -1.875rem;
+        left: -1.375rem;
         top: 50%;
         transform: translateY(-50%);
 
@@ -231,5 +231,9 @@
         position: relative;
         width: 100%;
         padding: 3.875rem 4rem;
+
+        @media (max-width: 63.975em){
+            padding: 2rem 2rem;
+        }
     }
 }
