--- a/src/less/components/_gallery.less
+++ b/src/less/components/_gallery.less
@@ -11,7 +11,19 @@
         background-repeat: no-repeat;
         background-size: cover;
         display: block;
-        border: 1px solid #fff;
-        border-radius: 0;
+        transition: 0.5s;
+
+        &:hover{
+            transform: scale(1.25);
+        }
     }
+
+    &_border{
+        border: 1px solid #fff;
+        border-radius: 0;   
+    }
+}
+
+.overflow{
+    overflow: hidden;
 }
