--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -9,7 +9,7 @@ html {
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	font-size: @base-font-size;
-	height: 100%;
+	min-height: 100%;
 
 	@media (min-width: 83em) and (max-width: 90.975em){
 		font-size: 90%;
@@ -36,7 +36,7 @@ body {
 	font-size: @font-size;
 	color: @text-color;
 	line-height: @line-height;
-	height: 100%;
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 	min-width: 320px;
@@ -103,6 +103,10 @@ p {
 	margin-top: 0;
 	color: #666;
 	font-weight: 300;
+
+	b{
+		font-weight: 600;
+	}
 
 	&:last-child{
 		margin-bottom: 0;
@@ -276,6 +280,12 @@ p {
 			margin-left: 0.5rem;
 		}
 	}
+
+	&_area{
+		.footer_block p a{
+			color: #666;
+		}
+	}
 }
 
 .absolute{
@@ -360,7 +370,7 @@ p {
 
 .wrapper{
 	position: relative;
-	z-index: 3;
+	z-index: 15;
 	margin-top: -11.75rem;
 	
 
@@ -375,6 +385,13 @@ p {
 		max-width: 80.625rem;
 		padding-top: 5rem;
 		z-index: 10;
+	}
+}
+
+#news_page{
+
+	.wrapper{
+		margin-top: -15rem;
 	}
 }
 
