--- a/src/less/components/_news.less
+++ b/src/less/components/_news.less
@@ -12,6 +12,7 @@
             color: @main--hover;
         }
     }
+
     &_text{
         margin-bottom: 1.25rem;
     }
@@ -20,5 +21,40 @@
         font-size: 0.875rem;
         font-weight: 300;
         color: #999;
+    }
+
+    &_card{
+        position: relative;
+        background-color: #fff;
+        margin-bottom: 1.875rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .news_text{
+            margin-bottom: 0;
+        }
+
+        .news_date{
+            margin-bottom: 0.625rem;
+        }
+    }
+
+    &_image{
+        position: relative;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-color: #ebebeb;
+        background-image: url(../../img/svg/news_bg.svg);
+        width: 100%;
+        height: 15rem;
+    }
+
+    &_information{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1.75rem 1.25rem;
     }
 }
