--- a/src/pug/components/_gallery.pug
+++ b/src/pug/components/_gallery.pug
@@ -6,4 +6,5 @@ section.gallery.section
     .row
         each item in galleryItems
             .small-6.medium-4.large-3
-                span.gallery_image.background_image(style='background-image: url('+ item +')')
+                div.overflow.gallery_border
+                    a.gallery_image.background_image(href=item, style='background-image: url('+ item +')', data-fancybox="gallery")
