--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -206,6 +206,119 @@ p {
 			color: @white;
 		}
 	}
+
+	&_card{
+
+		.title_size-large{
+			margin-bottom: 1.5rem;
+		}
+		.news_date{
+			margin-bottom: 2.25rem;
+		}
+
+		p{
+
+			img{
+				display: flex;
+				margin: 3.5rem auto 1.5rem;
+				max-width: 48.125rem;
+
+				@media (max-width: 63.975em){
+					max-width: 100%;
+				}
+
+				& + span{
+					display: inline-block;
+					text-align: center;
+					width: 100%;
+				}
+			}
+		}
+
+		ul{
+			margin: 0 0 1.5rem;
+			padding: 0;
+			list-style: none;
+			line-height: 1.5rem;
+			color: #666;
+			font-weight: 300;
+
+			li{
+				position: relative;
+				margin-bottom: 0.5rem;
+				padding-left: 2.25rem;
+
+				&:last-child{
+					margin-bottom: 0;
+				}
+
+				&:before{
+					content: '';
+					position: absolute;
+					left: 0;
+					top: 0.25rem;
+					display: inline-block;
+					width: 1rem;
+					height: 1rem;
+					background-image: url(../img/svg/marker.svg);
+					background-position: center;
+					background-repeat: no-repeat;
+					background-size: contain;
+				}
+			}
+		}
+	}
+}
+
+.back{
+	color: #333;
+	position: relative;
+	display: inline-flex;
+	align-items: center;
+	font-style: italic;
+
+	span{
+		border-bottom: 1px solid #333;
+	}
+
+	i{
+		font-size: 0.75rem;
+		margin-right: 0.625rem;
+	}
+
+	&:hover{
+		
+		span{
+			border-bottom-color: transparent;
+		}
+	}
+}
+
+.iframe_parents{
+	position: relative;
+	padding-bottom: 37%;
+	height: 0;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	margin: 3.5rem 0 3.5rem;
+
+	iframe{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: auto;
+		right: auto;
+		max-width: 48.125rem;
+	}
+
+	@media (max-width: 63.975em){
+		padding-bottom: 56%;
+
+		iframe{
+			max-width: 100%;
+		}
+	}
 }
 
 .row{
