--- a/src/less/components/_news.less
+++ b/src/less/components/_news.less
@@ -46,7 +46,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-color: #ebebeb;
-        background-image: url(../../img/svg/news_bg.svg);
+        background-image: url(../img/svg/news_bg.svg);
         width: 100%;
         height: 15rem;
     }
