--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -226,7 +226,9 @@ p {
 				@media (max-width: 63.975em){
 					max-width: 100%;
 				}
+			}
 
+			a{
 				& + span{
 					display: inline-block;
 					text-align: center;
