--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -278,6 +278,7 @@ p {
 	display: inline-flex;
 	align-items: center;
 	font-style: italic;
+	margin-bottom: .625rem;
 
 	span{
 		border-bottom: 1px solid #333;
