--- a/src/less/components/_title.less
+++ b/src/less/components/_title.less
@@ -4,6 +4,11 @@
 
 	&_size{
 
+		&-small{
+			font-size: 1rem;
+			margin-bottom: 1rem;
+		}
+
 		&-medium{
 			font-family: @font-family--serif;
 			font-size: 1.5rem;
@@ -25,7 +30,7 @@
 			font-size: 3.75rem;
 
 			@media (max-width: 39.975em){
-				font-size: 3rem;
+				font-size: 2.25rem;
 			}
 		}
 	}
@@ -64,4 +69,7 @@
 		text-transform: uppercase;
 	}
 
+	&-semibold{
+		font-weight: 600;
+	}
 }
