--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -26,6 +26,13 @@
 @import 'components/_gallery';
 @import 'components/_accardion';
 @import 'components/_reviews';
+@import 'components/_steps';
+@import 'components/_stat';
+@import 'components/_result';
+@import 'components/_headings';
+@import 'components/_articles';
+@import 'components/_files';
+
 // Pages
 @import 'components/_page-header';
 @import 'components/_page-footer';
