--- a/src/less/components/_fonts.less
+++ b/src/less/components/_fonts.less
@@ -11,6 +11,25 @@
 }
 
 
+@font-face {
+  font-family: 'AAntiqueTitulGr';
+  src: url('../fonts/aantiquetitulgr/AAntiqueTitulGr.woff') format('woff'),
+       url('../fonts/aantiquetitulgr/AAntiqueTitulGr.ttf') format('truetype'),
+       url('../fonts/aantiquetitulgr/AAntiqueTitulGr.svg#AAntiqueTitulGr') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'aantiquetitulgr';
+  src: url('../fonts/aantiquetitulgr/aantiquetitulgr.eot');
+  src: url('../fonts/aantiquetitulgr/aantiquetitulgr.woff2') format('woff2'),
+       url('../fonts/aantiquetitulgr/aantiquetitulgr.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 [class^="i-"], [class*=" i-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'icomoon' !important;
