--- a/src/less/components/_global.less
+++ b/src/less/components/_global.less
@@ -87,14 +87,17 @@ h2,
 h3,
 .h3 {
 	font-size: @font-size--h3;
+	font-weight: 400;
 }
 h4,
 .h4 {
 	font-size: @font-size--h4;
+	font-weight: 400;
 }
 h5,
 .h5 {
 	font-size: @font-size--h5;
+	font-weight: 400;
 }
 
 p {
@@ -210,10 +213,10 @@ p {
 	&_card{
 
 		.title_size-large{
-			margin-bottom: 1.5rem;
+			margin-bottom: 2.5rem;
 		}
 		.news_date{
-			margin-bottom: 2.25rem;
+			margin-bottom: 2.5rem;
 		}
 
 		p{
@@ -270,6 +273,11 @@ p {
 			}
 		}
 	}
+
+	&-small{
+		font-size: 0.875rem;
+		line-height: 1.4;
+	}
 }
 
 .back{
@@ -279,6 +287,7 @@ p {
 	align-items: center;
 	font-style: italic;
 	margin-bottom: .625rem;
+	cursor: pointer;
 
 	span{
 		border-bottom: 1px solid #333;
@@ -321,6 +330,13 @@ p {
 		iframe{
 			max-width: 100%;
 		}
+	}
+}
+
+.no{
+
+	&_margin{
+		margin: 0 !important;
 	}
 }
 
@@ -604,5 +620,30 @@ p {
 
 	#map{
 		height: 100%;
+	}
+}
+
+.helpfull-articless{
+
+	&_section{
+		.news{
+
+			&_title{
+				margin-bottom: 0.625rem;
+			}
+	
+			&_date{
+				margin-bottom: 1.375rem;
+			}
+		}
+	}
+
+	&_block{
+		margin-bottom: 2.5rem;
+
+		.news_date{
+			margin-top: 1.5rem;
+			margin-bottom: 0;
+		}
 	}
 }
